dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([egg.el])

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CHECK_PROGS([EMACS], [emacs])
AC_ARG_VAR([EMACS], [the Emacs editor command])

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl check if jisx0213 is supported or not
AC_MSG_CHECKING(jisx0213)
if "$EMACS" -batch -q -no-site-file -no-init-file -l ${srcdir}/check-jisx0213.el; then
  echo "yes"; HAVE_JISX0213=""
else
  echo "no"; HAVE_JISX0213="# "
fi
AC_SUBST(HAVE_JISX0213)

lispdir=${datadir}/emacs/site-lisp
AC_SUBST(lispdir)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
